<resources>
    <string name="app_name">QrSystem</string>
    <string name="setting">설정</string>
    <string name="qrcode">qrcode</string>
    <string name="search">검색</string>
    <string name="close">닫기</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_id">Admin ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_text">Yuhan19+</string>

    <string name="backBtn">backBtn</string>

    <!-- main_activity_product_review.xml --><!-- 상품 리뷰 페이지 -->
    <string name="productReview_title">상품리뷰</string>
    <string name="productReview_starMessage">상품에 대한 소중한 별점 부탁드립니다.</string>
    <string name="productReview_contentMessage">간단한 후기를 남겨주세요.</string>
    <string name="productReview_btn">리뷰작성</string>

    <!-- main_activity_storelocation -->
    <string name="webView_title">매장위치</string>


    <string name="outBtn">삭제 버튼</string>


    <string name="searchMemberIdHint">회원 이름을 입력 하세요</string>

    <!-- todo_list.xml -->
    <string name="IdTextView">Id</string>
    <string name="todoContent">todoContent</string>
    <string name="todoDate">todoDate</string>

    <!-- admin_list.xml -->
    <string name="admin_list_item_adminNum">관리자 번호</string>
    <string name="admin_list_item_adminId">관리자 ID</string>
    <string name="admin_list_item_adminPosition">관리자 직책</string>

    <!-- Setting.xml -->
    <string name="setting_adminId">관리자 Id</string>
    <string name="setting_adminAdd">관리자 추가</string>

    <!-- Page Title -->
    <string name="login_title">Yuhan 19+ Admin</string>

    <!-- admin_activity_admin_page.xml -->
    <string name="adminList_title">관리자 목록</string>
    <string name="searchAdminIdHint">관리자 ID를 입력 하세요</string>
    <string name="admin_page_editTextSearchAdminField">editTextSearchAdminField</string>

    <!-- 관리자 일정 페이지  -->
    <string name="adminSchedule_title">관리자 일정</string>

    <!-- 회원 탈퇴 요청 페이지 -->
    <string name="memberOutList_title">회원 탈퇴 요청 목록</string>
    <string name="member_list_item_memberJoinDate">member_list_item_memberJoinDate</string>

    <!-- 모드 -->
    <string name="dark_mode">Dark</string>
    <string name="light_mode">Light</string>

    <!-- 메뉴 -->
    <string name="home">관리자</string>
    <string name="member">회원관리</string>
    <string name="payment">결제내역</string>
    <string name="product_management">상품관리</string>
    <string name="product_register">상품등록</string>

    <!-- Home 메뉴 -->
    <string name="adminListMenu">관리자\n목록</string>
    <string name="adminScheduleMenu">관리자\n일정</string>
    <string name="adminMenu">팀장</string>
    <string name="adminLoginMenu">로그인</string>
    <string name="adminCreateAppQR">앱QR생성</string>
    <string name="setting_adminExit">관리자\n모드 종료</string>
    <string name="admin_list_ImageView">admin_list_ImageView</string>
    <string name="admin_schedule_ImageView">admin_schedule_ImageView</string>
    <string name="admin_call_ImageView">admin_call_ImageView</string>
    <string name="admin_login_ImageView">admin_login_ImageView</string>
    <string name="admin_exit_ImageView">admin_exit_ImageView</string>
    <string name="memberOut_ImageView">memberOut_ImageView</string>

    <!-- Member 메뉴 -->

    <!-- 회원관리 모달창 -->
    <string name="memberId">회원아이디</string>
    <string name="joinDate">가입날짜</string>
    <string name="memberPoint">보유포인트</string>

    <!-- 상품관리 모달창 -->
    <string name="product_code">상품코드</string>
    <string name="product_stock">상품재고</string>

    <!-- 결제내역 모달창 -->
    <string name="receipt_id">영수증 ID</string>
    <string name="user_id">사용자 ID</string>
    <string name="user_email">사용자 이메일</string>
    <string name="products">제품</string>
    <string name="total_price">총 가격</string>
    <string name="use_points">사용 포인트</string>
    <string name="payment_date">결제 날짜</string>

    <!-- ProductData Management Menu -->
    <string name="productSearchIdHint">상품명을 입력하세요</string>

    <!-- 상품등록 메뉴 -->
    <string name="product_image">상품 이미지</string>
    <string name="product_name">상품명</string>
    <string name="product_category">카테고리</string>

    <!--  여기서 카테고리내용 바꾸면 한번에 다 바뀜  -->
    <string name="product_categoryDefault">카테고리 분류 필요</string>
    <string name="product_category1">문구류</string>
    <string name="product_category2">생필품</string>
    <string name="product_category3">주방 도구</string>
    <string name="product_price">상품 가격</string>
    <string name="create_QR">QR 생성</string>
    <string name="product_register_btn">상품 등록</string>

    <!-- Admin Form -->
    <string name="admin_form_title">관리자 등록</string>
    <string name="admin_form_editTextIdField">Admin Id</string>
    <string name="admin_form_editTextPwField">Admin Pw</string>
    <string name="admin_form_editTextPositionField">관리자 직책</string>
    <string name="admin_form_adminAddBtn">관리자 등록</string>

    <!-- member_list.xml -->
    <string name="member_list_item_memberNum">memberNum</string>
    <string name="member_list_item_memberId">memberId</string>
    <string name="member_list_item_memberPoint">memberPoint</string>
    <string name="member_list_item_memberOut_ImageView">memberOut</string>

    <!-- product_list_item.xml -->
    <string name="productUpdateBtn">productUpdateBtn</string>
    <string name="productDeleteBtn">productDeleteBtn</string>

    <!-- 상품 수정 페이지 -->
    <string name="productUpdate_title">상품수정</string>
    <string name="product_update">Update</string>

    <!-- 야기서부터는 사용자 페이지 ===================================== -->

    <!-- main_activity_page -->
    <string name="main_logo">YUHAN19+</string>
    <string name="new_product">최신 상품</string>
    <string name="main_serch">검색어를 입력해 주세요</string>
    <string name="store_location_Btn">매장위치</string>
    <string name="payment_Btn">결제</string>
    <string name="product_Btn">상품</string>
    <string name="mypage_Btn">회원정보</string>
    <string name="admin_code">admin_code</string>

    <!-- main_activity_login.xml -->
    <string name="close_login">닫기</string>
    <string name="login">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pwd">비밀번호</string>
    <string name="non_login">비회원 로그인</string>
    <string name="register">회원가입</string>

    <!-- main_activity_my_info.xml -->
    <string name="retouch_info_user">회원 정보 수정</string>
    <string name="enter_pwd">비밀번호를 입력해 주세요</string>
    <string name="retouch_pwd">비밀번호 재입력</string>
    <string name="user_name">이름</string>
    <string name="using_name">사용할 이름을 입력해 주세요</string>
    <string name="double_check">중복 확인</string>
    <string name="phone_number">전화번호</string>
    <string name="first_num">010</string>
    <string name="hyphen"> - </string>
    <string name="birth">생년월일</string>
    <string name="year">년(4자리)</string>
    <string name="month"> 월 </string>
    <string name="day"> 일 </string>
    <string name="address">주소</string>
    <string name="detail_address">상세 주소</string>
    <string name="clear">완료</string>

    <!-- main_activity_mypage -->
    <string name="user_info">회원 정보</string>
    <string name="user_num">회원 번호</string>
    <string name="userPoint">회원 포인트</string>
    <string name="retouch_info">정보 수정</string>
    <string name="myPayment">구매내역</string>

    <!-- 구매내역 리스트뷰 item -->
    <string name="orderId">주문 ID</string>
    <string name="orderDate">결제 날짜</string>

    <!-- 구매내역 모달창 -->
    <string name="isValid">환불상태여부</string>

    <!-- main_activity_product_item_detail.xml -->
    <string name="category">카테고리</string>
    <string name="product_score">4.5</string>
    <string name="review_update">리뷰 등록</string>

    <!-- main_activity_scan.xml -->
    <string name="scan_item">찍은 상품</string>
    <string name="point">포인트</string>
    <string name="using_point">포인트 사용</string>
    <string name="price">가격</string>
    <string name="scan_payment">결제</string>

    <!-- main_activity_register.xml -->
    <string name="enter_id">이메일을 입력해 주세요</string>
    <string name="sign_up">가입 신청</string>

    <!-- main_product_review_item.xml -->
    <string name="score">평점</string>
    <string name="creation_date">작성일</string>

    <!-- main_scan_item.xml -->
    <string name="number">갯수</string>
</resources>