<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".main.MainRetouchInfoActivity">

    <ScrollView
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Close_info_Btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/yuhan"
                android:text="@string/retouch_info_user"/>
            <TextView
                android:id="@+id/id_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/login_id"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/User_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edittext_border"
                    android:textColor="@color/yuhan"/>

            </LinearLayout>
            <TextView
                android:id="@+id/pw_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:text="@string/login_pwd"/>
            <EditText
                android:id="@+id/Register_Pwd"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/edittext_border"
                android:textColor="@color/yuhan"
                android:inputType="textPassword"
                android:hint="@string/enter_pwd"/>
            <TextView
                android:id="@+id/pwCk_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:text="@string/retouch_pwd"/>
            <EditText
                android:id="@+id/Register_Pwd_Re"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/edittext_border"
                android:textColor="@color/yuhan"
                android:inputType="textPassword"
                android:hint="@string/enter_pwd"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/user_name"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/Register_name"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font"
                android:background="@drawable/edittext_border"
                android:textColor="@color/yuhan"
                android:hint="@string/using_name"/>
            <android.widget.Button
                android:id="@+id/Register_Name_Check"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/font"
                android:textColor="@color/white"
                android:text="@string/double_check"
                />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/phone_number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/First_Phone_Number"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:inputType="number"
                    android:hint="@string/first_num"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/hyphen"/>
                <EditText
                    android:id="@+id/Second_Phone_Number"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_border"
                    android:inputType="number"
                    android:textColor="@color/yuhan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/font"
                    android:text="@string/hyphen"/>
                <EditText
                    android:id="@+id/Third_Phone_Number"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_border"
                    android:inputType="number"
                    android:textColor="@color/yuhan"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/birth"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Year"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:inputType="number"
                    android:hint="@string/year"/>

                <EditText
                    android:id="@+id/Month"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:inputType="number"
                    android:hint="@string/month"/>

                <EditText
                    android:id="@+id/Day"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:inputType="number"
                    android:hint="@string/day"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/address"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:hint="@string/address"/>

                <EditText
                    android:id="@+id/detail_address"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/font"
                    android:textColor="@color/yuhan"
                    android:hint="@string/detail_address"/>
            </LinearLayout>

            <android.widget.Button
                android:id="@+id/Finish_Info_Btn"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/font"
                android:textColor="@color/white"
                android:text="@string/clear"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>