<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminProductEditActivity"
    android:id="@+id/productEditPage"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <soup.neumorphism.NeumorphImageView
            style="@style/Widget.Neumorph.ImageView"
            android:id="@+id/backBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="20dp"
            android:layout_gravity="start"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productUpdate_title"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/mainText"
            android:layout_marginStart="20dp"
            android:gravity="center"/>
    </LinearLayout>
    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:id="@+id/productEditCardView"
        android:layout_height="match_parent"
        android:padding="30dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed"
                    android:id="@+id/editTextProductName"
                    android:padding="25dp">
                    <EditText
                        android:id="@+id/editProductName2"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name"/>
                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed"
                    android:id="@+id/editTextProductImage"
                    android:padding="25dp">
                    <ImageView
                        android:id="@+id/imageViewProduct2"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/product_image"
                        android:src="@android:drawable/ic_menu_camera"/>
                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed"
                    android:id="@+id/editTextProductPrice"
                    android:padding="25dp">
                    <EditText
                        android:id="@+id/editProductPrice2"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/product_price"
                        android:inputType="numberDecimal"/>
                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed"
                    android:id="@+id/editTextProductStock"
                    android:padding="25dp">
                    <EditText
                        android:id="@+id/editProductStock2"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/product_stock"
                        android:inputType="number" />
                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:neumorph_shapeType="pressed"
                    android:id="@+id/editTextProductCategory"
                    android:padding="25dp">
                    <RadioGroup
                        android:id="@+id/categroryRadioGroup2"
                        android:checkableBehavior="single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/categoryRadioBtns1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/product_category1"
                            android:textColor="@color/black"/>
                        <RadioButton
                            android:checked="false"
                            android:id="@+id/categoryRadioBtns2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/product_category2"/>
                        <RadioButton
                            android:checked="false"
                            android:id="@+id/categoryRadioBtns3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/product_category3"/>
                    </RadioGroup>
                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/buttonUpdateProduct2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textSize="35sp"
                    android:text="@string/product_update"
                    app:neumorph_shapeType="flat" />
            </LinearLayout>
        </ScrollView>
    </soup.neumorphism.NeumorphCardView>
</LinearLayout>