<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/white"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/product_name"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/price"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderDate"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/orderDate"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderId"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/receiptIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/orderId"
            android:layout_marginStart="8dp"
            android:paddingBottom="4dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userPoint"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/pointTextView"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/userPoint"
            android:paddingBottom="4dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isValid"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/isValidTextView"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/isValid"
            android:paddingBottom="4dp" />
    </TableRow>

</TableLayout>
